Add matrix factorizations summary to introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -125,6 +125,18 @@
     pages = {1365--1389},
 }
 
+@article{Hirano,
+    shorthand = {Hir17},
+    author = {Hirano, Yuki},
+    title = {Derived {K}n\"{o}rrer periodicity and {O}rlov's theorem for gauged {L}andau-{G}inzburg models},
+    journal = {Compos. Math.},
+    fjournal = {Compositio Mathematica},
+    volume = {153},
+    year = {2017},
+    number = {5},
+    pages = {973--1007},
+}
+
 @article{Eisenbud,
     shorthand = {Eis80},
     author = {Eisenbud, David},
