--- a/introduction.tex
+++ b/introduction.tex
@@ -18,10 +18,5 @@ The structure of this report is as follows:
     \item In Chapter 1, we review the foundational material: the basics of the construction of the derived category, some computational tools like the Grothendieck spectral sequence. We describe Serre and Grothendieck-Verdier duality and the definition of Fourier-Mukai transforms, their adjoints and convolutions. After this, we review semiorthogonal decompositions and prove Beilinson's theorem, the projective bundle formula and the blow up formula. We end with a quick section on spherical twists.
     \item After this foundational section, we review three different directions and applications of derived categories. The first is a section on flips and flops ... 
     \item The third section focuses on the cubic fourfold, an interesting and classical example to which we can apply a contemporary spin via derived categories. We mention the intricate connections between special cubic fourfolds and K3 surfaces, rationality conjectures and the work of Kuznetsov \cite{KuznetsovDerivedCubic}, Hassett \cite{hassett_special_2000} and Addington-Thomas \cite{addington_hodge_2014}. 
-    \item Finally, we end with a section on matrix factorizations ...
+    \item Finally, we end with a section on matrix factorizations and derived categories of singularities as introduced by Orlov \cite{OrlovSingularities}, applying derived categories in the context of singular hypersurfaces. A classical result on matrix factorizations known as Kn\"orrer periodicity can be seen from a more geometric viewpoint in these contexts, as noted by Orlov and elaborated on in many papers, e.g. \cite{OrlovKnorrer}, \cite{Shipman}, \cite{Hirano}.
 \end{itemize}
-
-
-
-
-
