--- a/introduction.tex
+++ b/introduction.tex
@@ -16,7 +16,7 @@ The structure of this report is as follows:
 
 \begin{itemize}
     \item In Chapter 1, we review the foundational material: the basics of the construction of the derived category, some computational tools like the Grothendieck spectral sequence. We describe Serre and Grothendieck-Verdier duality and the definition of Fourier-Mukai transforms, their adjoints and convolutions. After this, we review semiorthogonal decompositions and prove Beilinson's theorem, the projective bundle formula and the blow up formula. We end with a quick section on spherical twists.
-    \item After this foundational section, we review three different directions and applications of derived categories. The first is a section on flips and flops ... 
+    \item After this foundational section, we review three different directions and applications of derived categories. First, we investigate the behaviour of derived categories of coherent sheaves when the underlying variety is subject to birational transformations such as flips, flops and contractions, which are the common operations applied in the minimal model program. In particular, examples of such transformations can be realised in the toric case as the result of wall crossings in a GIT problem, and we  discuss the semi-orthogonal decompositions of derived categories of toric varieties induced from these wall crossings. We also will see examples of the case of flops which induce derived equivalences, which can be expressed as spherical twists. 
     \item The third section focuses on the cubic fourfold, an interesting and classical example to which we can apply a contemporary spin via derived categories. We mention the intricate connections between special cubic fourfolds and K3 surfaces, rationality conjectures and the work of Kuznetsov \cite{KuznetsovDerivedCubic}, Hassett \cite{hassett_special_2000} and Addington-Thomas \cite{addington_hodge_2014}. 
     \item Finally, we end with a section on matrix factorizations ...
 \end{itemize}
