add citations in intro

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -554,3 +554,28 @@ shorthand = {Don17},
 }
 
 
+@misc{kawamata_d-equivalence_2002,
+	title = {D-equivalence and {K}-equivalence},
+	shorthand = {Kaw02},
+	url = {http://arxiv.org/abs/math/0205287},
+	publisher = {arXiv},
+	author = {Kawamata, Yujiro},
+	month = sep,
+	year = {2002},
+	note = {arXiv:math/0205287},
+	keywords = {14E30, 14J10, Mathematics - Algebraic Geometry},
+}
+
+
+@misc{bridgeland_flops_2000,
+	title = {Flops and derived categories},
+	shorthand = {Bri00},
+	url = {http://arxiv.org/abs/math/0009053},
+	publisher = {arXiv},
+	author = {Bridgeland, Tom},
+	month = sep,
+	year = {2000},
+	note = {arXiv:math/0009053},
+	keywords = {Mathematics - Algebraic Geometry},
+}
+
