--- a/introduction.tex
+++ b/introduction.tex
@@ -10,13 +10,13 @@ In the 90s came the the foundational papers by Bondal-Orlov \cite{bondal_semiort
 
 In 1994, a different viewpoint arose, connecting theoretical physics to derived categories. In his ICM address \cite{kontsevich_homological_1994}, Kontsevich proposed that mirror varieties coming from two models of string theory (the A-model and B-model) have rich categorical structures, which are moreover equivalent---on the A-side, there is what is called the Fukaya category, and on the B-side there is the derived category of coherent sheaves. Kontsevich conjectured that $\calD(X)\simeq \calD \mathrm{Fuk}(\hat{X})$ whenever $X$ and $\hat{X}$ are mirror to each other. This viewpoint created a fruitful dialogue between symplectic and algebraic geometry, and it has served as a dictionary connecting physics and geometry ever since.
 
-The mirror symmetry conjecture gave a strong motivation to understand exactly when derived equivalences of varieties arose. In particular, if bariational equivalence was related to derived equivalence. In 2000, Bridgeland proved that any two crepant resolutions of a terminal threefold would be derived equivalent. This result was especially significant, as it showed that birational Calabi Yau threefolds (which are related by a chain of flops) are derived equivalent. This was one of the results which inspired Kawamata to formulate the DK hypothesis, which conjectures that for $X$ and $Y$ birationally equivalent smooth projective varieties, their derived categories of coherent sheaves are equivalent if and only if there exists a smooth projective variety $Z$ with birational morphisms $f: Z \to X$ and $g: Z\to Y$ such that the pullbacks $f^{*}K_{X}\sim g^{*}K_{Y}$ are linear equivalent. This hypothesis has led the establishment of formulas which can express a derived category in terms of the variety's birational geometry, in particular, a decomposition of a derived cartegory which encodes the steps of the minimal model program.  
+The mirror symmetry conjecture gave a strong motivation to understand exactly when derived equivalences of varieties arose. In particular, if bariational equivalence was related to derived equivalence. In 2000, Bridgeland~\cite*{bridgeland_flops_2000} proved that any two crepant resolutions of a terminal threefold would be derived equivalent. This result was especially significant, as it showed that birational Calabi Yau threefolds (which are related by a chain of flops) are derived equivalent. This was one of the results which inspired Kawamata to formulate the DK hypothesis in~\cite*{kawamata_d-equivalence_2002}, which conjectures that for $X$ and $Y$ birationally equivalent smooth projective varieties, their derived categories of coherent sheaves are equivalent if and only if there exists a smooth projective variety $Z$ with birational morphisms $f: Z \to X$ and $g: Z\to Y$ such that the pullbacks $f^{*}K_{X}\sim g^{*}K_{Y}$ are linear equivalent. This hypothesis has led the establishment of formulas which can express a derived category in terms of the variety's birational geometry, in particular, a decomposition of a derived cartegory which encodes the steps of the minimal model program.  
 
 The structure of this report is as follows: 
 
 \begin{itemize}
     \item In Chapter 1, we review the foundational material: the basics of the construction of the derived category, some computational tools like the Grothendieck spectral sequence. We describe Serre and Grothendieck-Verdier duality and the definition of Fourier-Mukai transforms, their adjoints and convolutions. After this, we review semiorthogonal decompositions and prove Beilinson's theorem, the projective bundle formula and the blow up formula. We end with a quick section on spherical twists.
-    \item After this foundational section, we review three different directions and applications of derived categories. First, we investigate the behaviour of derived categories of coherent sheaves when the underlying variety is subject to birational transformations such as flips, flops and contractions, which are the common operations applied in the minimal model program. In particular, examples of such transformations can be realised in the toric case as the result of wall crossings in a GIT problem, and we  discuss the semi-orthogonal decompositions of derived categories of toric varieties induced from these wall crossings. We also will see examples of the case of flops which induce derived equivalences, which can be expressed as spherical twists. 
+    \item After this foundational section, we review three different directions and applications of derived categories. First, we investigate the behaviour of derived categories of coherent sheaves when the underlying variety is subject to birational transformations such as flips, flops and contractions, which are the common operations applied in the minimal model program. In particular, examples of such transformations can be realised as the result of wall crossings in a toric GIT problem, and we  discuss the semi-orthogonal decompositions of derived categories of toric varieties induced from these wall crossings, as proved by Halpern-Leistner and Shipman~\cite*{halpernleistner2016autoequivalences}, and a homological interpretation of the minimal model program due to~\cite*{ballard_mori_2013,Kite_2022}. We also will see examples of the case of flops which induce derived equivalences, which can be expressed as spherical twists from the work of~\cite*{donovan_window_2014}. 
     \item The third section focuses on the cubic fourfold, an interesting and classical example to which we can apply a contemporary spin via derived categories. We mention the intricate connections between special cubic fourfolds and K3 surfaces, rationality conjectures and the work of Kuznetsov \cite{KuznetsovDerivedCubic}, Hassett \cite{hassett_special_2000} and Addington-Thomas \cite{addington_hodge_2014}. 
     \item Finally, we end with a section on matrix factorizations and derived categories of singularities as introduced by Orlov \cite{OrlovSingularities}, applying derived categories in the context of singular hypersurfaces. A classical result on matrix factorizations known as Kn\"orrer periodicity can be seen from a more geometric viewpoint in these contexts, as noted by Orlov and elaborated on in many papers, e.g. \cite{OrlovKnorrer}, \cite{Shipman}, \cite{Hirano}.
 \end{itemize}
