a bit more on addington-thomas

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -579,3 +579,56 @@ shorthand = {Don17},
 	keywords = {Mathematics - Algebraic Geometry},
 }
 
+@misc{huybrechts_deformation-obstruction_2013,
+    shorthand = {HuyTh07},
+	title = {Deformation-obstruction theory for complexes via {Atiyah} and {Kodaira}--{Spencer} classes},
+	url = {http://arxiv.org/abs/0805.3527},
+	doi = {10.48550/arXiv.0805.3527},
+	abstract = {We give a universal approach to the deformation-obstruction theory of objects of the derived category of coherent sheaves over a smooth projective family. We recover and generalise the obstruction class of Lowen and Lieblich, and prove that it is a product of Atiyah and Kodaira--Spencer classes. This allows us to obtain deformation-invariant virtual cycles on moduli spaces of objects of the derived category on threefolds.},
+	urldate = {2024-04-22},
+	publisher = {arXiv},
+	author = {Huybrechts, D. and Thomas, R. P.},
+	month = sep,
+	year = {2013},
+	note = {arXiv:0805.3527 [math]},
+	keywords = {Mathematics - Algebraic Geometry, 14D15, 14F05},
+}
+
+
+@article{bayer_stability_2021,
+    shorthand = {Bayer21},
+	title = {Stability conditions in families},
+	volume = {133},
+	issn = {0073-8301, 1618-1913},
+	url = {https://link.springer.com/10.1007/s10240-021-00124-6},
+	doi = {10.1007/s10240-021-00124-6},
+	abstract = {Abstract
+            We develop a theory of Bridgeland stability conditions and moduli spaces of semistable objects for a family of varieties. Our approach is based on and generalizes previous work by Abramovich–Polishchuk, Kuznetsov, Lieblich, and Piyaratne–Toda. Our notion includes openness of stability, semistable reduction, a support property uniformly across the family, and boundedness of semistable objects. We show that such a structure exists whenever stability conditions are known to exist on the fibers.
+            Our main application is the generalization of Mukai’s theory for moduli spaces of semistable sheaves on K3 surfaces to moduli spaces of Bridgeland semistable objects in the Kuznetsov component associated to a cubic fourfold. This leads to the extension of theorems by Addington–Thomas and Huybrechts on the derived category of special cubic fourfolds, to a new proof of the integral Hodge conjecture, and to the construction of an infinite series of unirational locally complete families of polarized hyperkähler manifolds of K3 type.
+            Other applications include the deformation-invariance of Donaldson–Thomas invariants counting Bridgeland stable objects on Calabi–Yau threefolds, and a method for constructing stability conditions on threefolds via degeneration.},
+	language = {en},
+	number = {1},
+	urldate = {2024-04-22},
+	journal = {Publications mathématiques de l'IHÉS},
+	author = {Bayer, Arend and Lahoz, Martí and Macrì, Emanuele and Nuer, Howard and Perry, Alexander and Stellari, Paolo},
+	month = jun,
+	year = {2021},
+	pages = {157--325},
+}
+
+@misc{li_derived_2022,
+    shorthand = {LiPerZh22},
+	title = {Derived categories of hearts on {Kuznetsov} components},
+	url = {http://arxiv.org/abs/2203.13864},
+	doi = {10.48550/arXiv.2203.13864},
+	abstract = {We prove a general criterion which guarantees that an admissible subcategory \${\textbackslash}mathcal\{K\}\$ of the derived category of an abelian category is equivalent to the bounded derived category of the heart of a bounded t-structure. As a consequence, we show that \${\textbackslash}mathcal\{K\}\$ has a strongly unique dg enhancement, applying the recent results of Canonaco, Neeman and Stellari. We apply this criterion to the Kuznetsov component \${\textbackslash}mathop\{{\textbackslash}mathcal\{K\}u\}(X)\$ when \$X\$ is a cubic fourfold, a Gushel--Mukai variety or a quartic double solid. In particular, we obtain that these Kuznetsov components have strongly unique dg enhancement and that exact equivalences of the form \${\textbackslash}mathop\{{\textbackslash}mathcal\{K\}u\}(X) {\textbackslash}xrightarrow\{{\textbackslash}sim\} {\textbackslash}mathop\{{\textbackslash}mathcal\{K\}u\}(X')\$ are of Fourier--Mukai type when \$X\$, \$X'\$ belong to these classes of varieties, as predicted by a conjecture of Kuznetsov.},
+	urldate = {2024-04-22},
+	publisher = {arXiv},
+	author = {Li, Chunyi and Pertusi, Laura and Zhao, Xiaolei},
+	month = mar,
+	year = {2022},
+	note = {arXiv:2203.13864 [math]},
+	keywords = {Mathematics - Algebraic Geometry},
+}
+
+
