--- a/introduction.tex
+++ b/introduction.tex
@@ -10,7 +10,7 @@ In the 90s came the the foundational papers by Bondal-Orlov \cite{bondal_semiort
 
 In 1994, a different viewpoint arose, connecting theoretical physics to derived categories. In his ICM address \cite{kontsevich_homological_1994}, Kontsevich proposed that mirror varieties coming from two models of string theory (the A-model and B-model) have rich categorical structures, which are moreover equivalent---on the A-side, there is what is called the Fukaya category, and on the B-side there is the derived category of coherent sheaves. Kontsevich conjectured that $\calD(X)\simeq \calD \mathrm{Fuk}(\hat{X})$ whenever $X$ and $\hat{X}$ are mirror to each other. This viewpoint created a fruitful dialogue between symplectic and algebraic geometry, and it has served as a dictionary connecting physics and geometry ever since.
 
-The mirror symmetry conjecture gave a strong motivation to understand exactly when derived equivalences of varieties arose. In particular, if bariational equivalence was related to derived equivalence. In 2000, Bridgeland~\cite*{bridgeland_flops_2000} proved that any two crepant resolutions of a terminal threefold would be derived equivalent. This result was especially significant, as it showed that birational Calabi Yau threefolds (which are related by a chain of flops) are derived equivalent. This was one of the results which inspired Kawamata to formulate the DK hypothesis in~\cite*{kawamata_d-equivalence_2002}, which conjectures that for $X$ and $Y$ birationally equivalent smooth projective varieties, their derived categories of coherent sheaves are equivalent if and only if there exists a smooth projective variety $Z$ with birational morphisms $f: Z \to X$ and $g: Z\to Y$ such that the pullbacks $f^{*}K_{X}\sim g^{*}K_{Y}$ are linear equivalent. This hypothesis has led the establishment of formulas which can express a derived category in terms of the variety's birational geometry, in particular, a decomposition of a derived cartegory which encodes the steps of the minimal model program.  
+The mirror symmetry conjecture gave a strong motivation to understand exactly when derived equivalences of varieties arose. In particular, if birational equivalence was related to derived equivalence. In 2000, Bridgeland~\cite*{bridgeland_flops_2000} proved that any two crepant resolutions of a terminal threefold would be derived equivalent. This result was especially significant, as it showed that birational Calabi Yau threefolds (which are related by a chain of flops) are derived equivalent. This was one of the results which inspired Kawamata to formulate the DK hypothesis in~\cite*{kawamata_d-equivalence_2002}, which conjectures that for $X$ and $Y$ birationally equivalent smooth projective varieties, their derived categories of coherent sheaves are equivalent if and only if there exists a smooth projective variety $Z$ with birational morphisms $f: Z \to X$ and $g: Z\to Y$ such that the pullbacks $f^{*}K_{X}\sim g^{*}K_{Y}$ are linear equivalent. This hypothesis has led the establishment of formulas which can express a derived category in terms of the variety's birational geometry, in particular, a decomposition of a derived cartegory which encodes the steps of the minimal model program.  
 
 The structure of this report is as follows: 
 
